Spark: refine resources paths, properly use file API